--- a/frontend_insta/src/App.css
+++ b/frontend_insta/src/App.css
@@ -2,6 +2,7 @@ body {
   background-color: rgb(243, 243, 243);
 }
 .signup_head {
+  padding: 0px 30px 0px 30px;
   font-weight: bold;
   color: rgb(102, 102, 102);
   text-align: center;
@@ -16,8 +17,8 @@ body {
 }
 .loginSignup_inner_img {
   position: absolute;
-  margin-top: 7.35%;
-  margin-left: -22.24%;
+  margin-top: 6.35%;
+  margin-left: -19.8%;
   z-index: 0;
 }
 .loginSignupDiv {
@@ -56,6 +57,7 @@ body {
   border: none;
 }
 .loginSignupDiv_para {
+  padding: 0px 20px 0px 20px ;
   font-size: 15px;
   font-weight: 300;
   text-align: center;
@@ -235,7 +237,7 @@ body {
   height: fit-content;
   background-color: white;
   top: 71px;
-  left: 1019px;
+  right: 40px;
   border: solid 1px #dbdbdb;
   padding: 13px;
   display: flex;
@@ -575,4 +577,13 @@ display:inline-block;
   margin-left: -25px;
   display: none;
   z-index: 2;
+}
+
+@media only screen and (max-width: 1230px){
+  .loginInfo {
+    position: relative;
+    top: 71px;
+    right: 0px;
+    margin-bottom: 10px;
+  }
 }
